# russian-stocks-api

./: .env.dist  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workfloes/: pythonapp.yml
.github/workflows/: ci.yml  deploy.yml  quality.yml
examples/: client.py  tickers.py
migrations/: env.py
migrations/versions/: 10e259fdba0c_.py  6d9ddf2403cf_.py  6fe2835c6e8f_.py  975bf41b6724_.py  af82fb193b5d_.py  bc18c9723776_.py  e364b89655b2_.py  e472227c75d8_.py
stocks/: __init__.py  app.py  config.py  containers.py  db.py  decorators.py  dependendies.py  entities.py  filtersets.py  models.py  mongo.py  namespace.py  query.py  repostories.py  responses.py  rest_fields.py  settings.py  types.py
stocks/filters/: __init__.py  fields.py  filterset.py  query.py
stocks/objects/: abc.py  asset.py  assets.py  payment.py  portfolio.py  quote.py  ticker.py  token.py
stocks/repositories/: __init__.py  abc.py  operations.py  payments.py  quotes.py  tickers.py  tokens.py  uow.py
stocks/resources/: __init__.py  imports.py  portfolio.py  tickers.py  tokens.py
stocks/routes/: crawler.py  portfolio.py  quotes.py  tickers.py  tokens.py
