[tool.poetry]
name = "russian-stocks-api"
version = "0.1.0"
description = ""
authors = ["Vadim Ryazanov <vadimvoronezh@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"
pymongo = "^3.10.1"
bravado = "^10.6.2"
pydantic = "^1.6.1"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mypy = "^0.770"
wemake-python-styleguide = "^0.14.0"
typing_extensions = "^3.7.4"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
